tinyc/test/bad/struct-rvalue-comma-assignment.c
struct s
{
    int x;
};

int main()
{
    struct s s1,
             s2;

    ( 1, s1 ) = s2;

    return 0;
}
